# RuamEngine

./: .gitignore  CMakeLists.txt
RuamEngine/: CMakeLists.txt  RuamEngine.cpp  RuamEngine.h
RuamEngine/CoolFede97/: CMakeLists.txt  main.cpp
RuamEngine/CoolFede97/res/shaders/: BasicFragment.glsl  BasicVertex.glsl
RuamEngine/CoolFede97/res/shaders/basic/: BasicFragment.txt  BasicVertex.txt
RuamEngine/CoolFede97/res/shaders/camera/: CameraFragment.txt  CameraVertex.txt
RuamEngine/CoolFede97/src/: Application.cpp  CameraTest.cpp  Test.cpp
RuamEngine/CoolFede97/src/tests/tests/: Sandbox.cpp  Sandbox.h  Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h  TestMovement.cpp  TestMovement.h  TestTexture2D.cpp  TestTexture2D.h  TestTextures.cpp  TestTextures.h
RuamEngine/Docs/: fileoverview.md  notes.md
RuamEngine/RuamCore/Audio/: AudioSystem.cpp  AudioSystem.hpp  Wave.cpp  Wave.hpp  al-wrapper.cpp  al-wrapper.hpp  alc-wrapper.cpp  alc-wrapper.hpp
RuamEngine/RuamCore/Components/: AudioSource.cpp  AudioSource.h  Manager.cpp  Manager.h  SandboxCom.h  Transform.cpp  Transform.h
RuamEngine/RuamCore/EventSystem/: EventManager.cpp  EventManager.h
RuamEngine/RuamCore/Files/: FileFunctions.cpp  FileFunctions.h
RuamEngine/RuamCore/Input/: Cursor.h  Input.cpp  Input.h  KeyCode.h
RuamEngine/RuamCore/Maths/: Vec3.cpp  Vec3.h
RuamEngine/RuamCore/Maths/Vec/: Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
RuamEngine/RuamCore/Objects/: Component.cpp  Component.hpp  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Serial.cpp  Serial.hpp
RuamEngine/RuamCore/Rendering/: Camera.cpp  Camera.h  DrawingData.cpp  DrawingData.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  RenderUnit.cpp  RenderUnit.h  Renderer.cpp  Renderer.h  RendererCore.h  RenderingConstants.h  RenderingCore.h  RenderingElements.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
RuamEngine/RuamCore/RuamUtils/: DebugUtils.h  OpenGLUtils.h  RuamUtils.h  ThreadPool.h
RuamEngine/RuamCore/Time/: RuamTime.cpp  RuamTime.h
RuamEngine/Santinorua/: CMakeLists.txt
RuamEngine/Santinorua/src/: EventManager.cpp  EventManager.h  Input.cpp  Input.h  main.cpp
RuamEngine/Scenes/: MenuScene.cpp
RuamEngine/Skuerjuan/: CMakeLists.txt
RuamEngine/Skuerjuan/src/: TestComponent.cpp  TestComponent.hpp  deserialise.cpp  main.cpp  serialise.cpp  serialise.hpp  serialisetest.cpp
RuamEngine/Tomyatana/: CMakeLists.txt
RuamEngine/Tomyatana/include/: al-wrapper.h  alc-wrapper.h  wave.hpp
RuamEngine/Tomyatana/src/: al-wrapper.cpp  alc-wrapper.cpp  main.cpp  wave.cpp
RuamEngine/assets/components/: Counter.h  Manager.h  SandboxCom.h  SandboxCom2.h
RuamEngine/assets/scenes/: MainScene.cpp  MenuScene.cpp  SandboxScene.cpp  SandboxScenes.cpp  TestScene.cpp
RuamEngine/assets/shaders/: GeneralFragmentShader.glsl  GeneralVertexShader.glsl
RuamEngine/components/: Manager.cpp  Manager.h
RuamEngine/scenes/: MenuScene.cpp
RuamEngine/scripts/: cmake_setup.sh
RuamEngine/tests/: Sandbox.cpp
RuamEngine/tests/scenes/: MainScene.cpp
